--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -426,6 +426,14 @@
 	通常のHSP3にはないメリットもあるため、Windowsに対応したソフトの
 	作成用途としてもお使い頂けます。
 	</p>
+	<p>
+	Windows版のHSP3Dishランタイムは、Windows98、Me、2000、XP以降の
+	DirectX8がインストールされた環境で動作します。
+	(Windows XP以降(Windows Vista,8,10)には、標準で含まれているため
+	追加でDirectXインストールの必要はありません)<br>
+	また、Windows版のHGIMG4は、OpenGL及びDirectX9を使用します。
+	動作環境については、別途HGIMG4のマニュアルを参照してください。
+	</p>
 
 	<h2 id="INIFILE">起動設定ファイルについて</h2>
 	<p>
