--- a/package/win32/hsp3js/template.html
+++ b/package/win32/hsp3js/template.html
@@ -267,6 +267,8 @@ function assert(check, msg) {
   if (!check) throw msg + new Error().stack;
 }
 
+$$$mkdirrequest$$$
+
     function DataRequest(start, end, crunched, audio) {
       this.start = start;
       this.end = end;
