ドキュメントの更新
Former-commit-id: 049de1646da3f8c1a03ba3255361d47dd3d0d785

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.5 / onion software 1997-2017(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.51 / onion software 1997-2018(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
 		<h1>HSP3 概要</h1>
 
@@ -86,7 +86,7 @@
 			また、Windows 7、8、8.1、10及びVistaの64bit(x64)版での動作を確認しています。
 		</p>
 		<pre>
-		Windows 98及びMe上では、標準の「HSPスクリプトエディタ」は動作致しません。
+		Windows 2000より以前のバージョンでは、標準の「HSPスクリプトエディタ」は動作致しません。
 		簡易版エディタ(hsed3le.exe)をご使用頂けば、標準的なHSPの機能はご使用頂けます。
 		また、InternetExplorer4.0以降がインストールされているWindows 95上でも動作可能ですが、保証外となります。
 
@@ -603,7 +603,7 @@
 			HSP3及びHSPTVデザインワークは、Senchaさん、ゆめゆめゆうかさんに作成して頂きました。
 		</p>
 		<p>
-			HSPスクリプトエディタ(hsed3.exe)は、Lonely Wolfさん、Shark++さんのご協力により作成されています。
+			HSPスクリプトエディタ(hsed3.exe)は、Lonely Wolfさん、Shark++さん、inoviaさん、Tetr@podさんのご協力により作成されています。
 		</p>
 		<p>
 			HSPスクリプトエディタ(hsed3.exe)の、エディタエンジンとしてHyperPageProjectさんのFootyライブラリを使用しています。
