--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -15,7 +15,7 @@
 
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY"><a id="top" class="head">HSP : Hot Soup Processor ver3.5 / onion software 1997-2017(c)</a></p>
+		<p id="COPY"><a id="top" class="head">HSP : Hot Soup Processor ver3.51 / onion software 1997-2018(c)</a></p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
 		<h1>プログラミング・マニュアル</h1>
 
@@ -50,6 +50,7 @@
 
 					<li><a href="#HSPUTF">UTF8対応版ランタイムの利用について<span class="new">（New!）</span></a></li>
 					<li><a href="#HSP64">64bit(x64)対応版ランタイムの利用について<span class="new">（New!）</span></a></li>
+					<li><a href="#HSED3CUSTOM">スクリプトエディタの拡張機能について<span class="new">（New!）</span></a></li>
 				</ol>
 			</li>
 			<li><a href="#DESCRIPTION">スクリプト記述の基本</a>
@@ -1135,6 +1136,30 @@
 			<li>#packopt命令によるアイコンの書き換えに対応していません
 		</ul>
 
+
+
+		<h3 id="HSED3CUSTOM">スクリプトエディタの拡張機能について</h3>
+		<p>
+			HSP3.51から、改造版 HSP3スクリプトエディタ(inoviaさん、Tetr@podさんによる実装)の拡張機能を取り込んでいます。<br>
+			以下の機能が追加されています。
+		</p>
+		<ul>
+			<li>カスタムキーワード色分け機能
+			<li>ファイルの自動バックアップ機能
+			<li>プロポーショナルフォントなど従来設定できなかったフォントへの対応
+			<li>ウィンドウの分割機能
+			<li>背景画像表示機能
+			<li>ラベルのダブルクリックによる移動(リンクラベル)
+			<li>ユーザー定義命令・関数の色分け機能
+			<li>高速化された置換機能
+		</ul>
+		<p>
+			拡張された機能は、「ツール」→「オプション」メニューの各項目でON/OFFが可能です。<br>
+			リンクラベル機能を使用する場合は、オプションの「エディタ」→「色」項目で「リンクラベルを使用する」にチェックを入れてください。以降は、スクリプト中のラベルが色分けされ、ダブルクリックすることで定義されたラベルに移動できます。<br>
+			背景画像表示機能により、指定した画像をエディタ背景右下に常に表示しておくことができます。オプションの「エディタ」→「色」項目で設定することができます。
+			設定が空欄(デフォルト)の場合は、HSPTVフォルダにあるeditor.pngファイルが使用されます。(背景画像を使用しない場合は、editor.pngファイルを削除するか、別なフォルダに移動してください。)<br>
+			ファイルの自動バックアップ機能は、オプションの「全般」→「動作」から設定することができます。一定時間ごとに編集中のファイルのバックアップを作成することで、強制終了やリセットなど不測の事態にスクリプトを失うことがなくなります。(バックアップは、HSPのインストールフォルダ内の「backup」フォルダに作成されます。)
+		</p>
 
 
 		<h2 id="DESCRIPTION">基本文法</h2>
