HSP Docs Library(ドキュメントビューアー)、Artlet2D、d3module,SQLeleを最新版に更新 ドキュメントの更新
Former-commit-id: c2f0f1edee0ebbc1ce93b8b7594ab14ad9bde831

--- a/package/win32/doclib/HSP Docs Library/hdl_usage.html
+++ b/package/win32/doclib/HSP Docs Library/hdl_usage.html
@@ -7,7 +7,7 @@
 
 <h1>HSP Docs Library の使い方、ドキュメントの書き方</h1>
 
-<p><img src='img_hdl.png'></p>
+<p><img src='hdl_360_2.png'></p>
 
 <p>HSP Docs Library (HDL) は、HSP のドキュメントをまとめて 検索・閲覧 するためのブラウザです。</p>
 
@@ -255,4 +255,4 @@ px～pz, m00～m22 で、座標変換マトリクスを指定します。<br>
 
 <p>HDL の最新バージョンは、s.programe net <a href="http://spn.php.xdomain.jp/">http://spn.php.xdomain.jp/</a> で公開されています。
 
-<footer>HSP Docs Library<br>s.programs</footer>
+<footer>HSP Docs Library - <a href="http://spn.php.xdomain.jp/">s.programs</a></footer>
