--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -282,6 +282,8 @@
 			<dd><p><a href="http://hsp.tv/" target="_blank">http://hsp.tv/</a></p></dd>
 			<dt>HSP関連書籍ページ（書店で入手できる参考書の紹介）</dt>
 			<dd><p><a href="http://hsp.tv/make/hspbook.html" target="_blank">http://hsp.tv/make/hspbook.html</a></p></dd>
+			<dt>hsp3info Twitter（HSP公式情報アカウント）</dt>
+			<dd><p><a href="https://twitter.com/hsp3info" target="_blank">https://twitter.com/hsp3info</a></p></dd>
 			<dt>ONION software（HSP開発元）</dt>
 			<dd><p><a href="http://www.onionsoft.net/" target="_blank">http://www.onionsoft.net/</a></p></dd>
 		</dl>
@@ -297,6 +299,7 @@
 			HSPについての一般的な質問や、スクリプトの作り方に関するご質問は、
 			ネット上のFAQや、書籍などでも情報を提供していますので、まず調べてみることをお勧め致します。
 		</p>
+		<p><dl>Twitter  : <a href="https://twitter.com/hsp3info" target="_blank">https://twitter.com/hsp3info</a></dl></p>
 		<p><dl>e-mail  : <address>hsp@onionsoft.net</address></dl></p>
 
 		<h2 id="RECENT">最新版の提供について</h2>
@@ -603,7 +606,7 @@
 			HSP3及びHSPTVデザインワークは、Senchaさん、ゆめゆめゆうかさんに作成して頂きました。
 		</p>
 		<p>
-			HSPスクリプトエディタ(hsed3.exe)は、Lonely Wolfさん、Shark++さん、inoviaさん、Tetr@podさんのご協力により作成されています。
+			HSPスクリプトエディタ(hsed3.exe)は、Lonely Wolfさん、Shark++さん、inoviaさん、Tetr@podさんのご協力により作成されています。HSP3.51からは、改造版 HSP3スクリプトエディタ(inoviaさん、Tetr@podさんによる実装)の拡張機能を取り込んでいます。
 		</p>
 		<p>
 			HSPスクリプトエディタ(hsed3.exe)の、エディタエンジンとしてHyperPageProjectさんのFootyライブラリを使用しています。
@@ -703,12 +706,6 @@
 			<dd>
 				<p>
 		<a href="http://www.geocities.jp/tko_soft/" target="_blank">http://www.geocities.jp/tko_soft/</a>
-				</p>
-			</dd>
-			<dt>HSP-NEXT (さくら さん)</dt>
-			<dd>
-				<p>
-		<a href="http://hspnext.com/" target="_blank">http://hspnext.com/</a>
 				</p>
 			</dd>
 			<dt>fujidigさん</dt>
