HSP3.51スクリプトエディタの更新 HSP3.51通常版の更新
Former-commit-id: 04b893dea3b4c44b061c2323faab19ea85b784a7

--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.5 / onion software 1997-2017(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.51 / onion software 1997-2019(c)</p>
 		<img src="doclib/hsp3ttl.jpg" width="640" height="200" alt="タイトル">
 		<h1>HSPマニュアル総合インデックス</h1>
 		
@@ -29,9 +29,10 @@
 			<li><a href="doclib/plugin.htm">拡張プラグイン・モジュール一覧（plugin.htm）</a></li>
 			<li><a href="doclib/hspat.htm">HSPアシスタント マニュアル（hspat.htm）</a></li>
 			<li><a href="doclib/peas.htm">peasエディタ マニュアル（peas.htm）</a></li>
-			<li><a href="doclib/HSP Document Library/hdl_usage.htm">HDL(HSP Document Library) の使い方（hdl_usage.htm）</a></li>
+			<li><a href="doclib/HSP Docs Library/hdl_usage.html">HDL(HSP Document Library) の使い方（hdl_usage.html）</a></li>
 			<li><a href="doclib/hsptv.htm">HSPTVブラウザ マニュアル（hsptv.htm）</a></li>
 			<li><a href="doclib/hsptv_res.htm">HSPTVフォルダ素材一覧（hsptv_res.htm）</a></li>
+			<li><a href="doclib/pronama.htm">HSP3.51プロ生ちゃん素材（pronama.htm）</a></li>
 			<li><a href="doclib/tamane.txt">HSP3オフィシャル3D素材 "珠音（たまね）"（tamane.txt）</a></li>
 			<li><a href="http://hsp.tv/make/tamane2d.html">HSP3オフィシャル2D素材 "珠音（たまね）"（外部webページ）</a></li>
 	    	        <li><a href="hsp3dish.htm">HSP3Dish</a>
@@ -84,7 +85,7 @@
 					<li><a href="doclib/aht.txt">AHT（Additional HSP Template &amp; Tools）マニュアル（中上級者向け）（aht.txt）</a></li>
 					<li><a href="doclib/hsptv_api.txt">HSPTV対応ソフト作成マニュアル（中上級者向け）（hsptv_api.txt）</a></li>
 					<li><a href="doclib/hsptvapp.txt">HSPTV!ランキング対応ソフト作成マニュアル（中上級者向け）（hsptvapp.txt）</a></li>
-					<li><a href="doclib/HSP Document Library/HS_BIBLE.txt">HSP HELP Browser用 hsファイルの標準仕様（HS_BIBLE.txt）</a></li>
+					<li><a href="doclib/HSP Docs Library/HS_BIBLE.txt">HSP HELP Browser用 hsファイルの標準仕様（HS_BIBLE.txt）</a></li>
 					<li><a href="hspsdk/readme.txt">HSPSDK(HSP開発キット)マニュアル（上級者向け）（readme.txt）</a></li>
 					<li><a href="hspsdk/hspdll.txt">HSPプラグイン開発マニュアル（上級者向け）（hspdll.txt）</a></li>
 					<li><a href="doclib/hsp3cnv.txt">HSP3ソースコンバーター マニュアル（上級者向け）（hsp3cnv.txt）</a></li>
