ドキュメントの更新
Former-commit-id: 1bc8e923631041c07a3c71471021c282c8c6401a

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.51 / onion software 1997-2018(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.51 / onion software 1997-2019(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
 		<h1>HSP3 概要</h1>
 
@@ -37,6 +37,7 @@
 			<li><a href="#ROADMAP">今後の予定</a></li>
 			<li><a href="#USERCOM">HSPユーザーコミュニティ</a></li>
 			<li><a href="#LICENCE">HSPによって作られたソフトウェアのライセンスについて</a></li>
+			<li><a href="#PRONAMA">プロ生ちゃんコラボ素材について</a></li>
 			<li><a href="#COPYRIGHT">著作権、ライセンスについて</a></li>
 			<li><a href="#LANG_SPEC">言語仕様の管理について</a></li>
 			<li><a href="#EDUCATION">教育用途の使用について</a></li>
@@ -82,7 +83,7 @@
 			<li>Microsoft Windows 2000、XP ( NT4.0以降を含む )、Vista、7、8、8.1、10</li>
 		</ul>
 		<p>
-			HSP3.5は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。<br>
+			HSP3.51は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。<br>
 			また、Windows 7、8、8.1、10及びVistaの64bit(x64)版での動作を確認しています。
 		</p>
 		<pre>
@@ -106,7 +107,7 @@
 
 		<h2 id="PACKAGE">パッケージ構成</h2>
 		<p>
-			HSP3.5フルセットは、オープンソースとして公開されているOpenHSP技術をベースに、
+			HSP3.51フルセットは、オープンソースとして公開されているOpenHSP技術をベースに、
 			Windows上で手軽にプログラミングを楽しむことができるよう構成されています。
 			スクリプトを記述するための「HSPスクリプトエディタ」を始めとして、
 			視覚的にプログラムの動作を確認することができるツール「Peas」、
@@ -127,18 +128,18 @@
 
 		<h2 id="INSTALL">インストール</h2>
 		<p>
-			HSP3.5フルセットは、インストーラー付きのバージョンと圧縮ファイル版が用意されています。
+			HSP3.51フルセットは、インストーラー付きのバージョンと圧縮ファイル版が用意されています。
 			インストーラーを起動するか、または任意のディレクトリにhsp34フォルダを解凍する
 			ことで使用できるようになります。(推奨ディレクトリは、「c:\hsp34」です)
 		</p>
 		<p>
-			HSP3.5以前のバージョンが既にインストールされている場合は、以前のものをアンインストール
+			HSP3.51以前のバージョンが既にインストールされている場合は、以前のものをアンインストール
 			してから、新しいバージョンをインストールすることを推奨します。
-			ただし、HSP3.5のインストーラーは、インストール先のフォルダ以外にファイルの追加を行ないませんので、
+			ただし、HSP3.51のインストーラーは、インストール先のフォルダ以外にファイルの追加を行ないませんので、
 			以前のバージョンと競合することはありません。(過去のバージョンと同時に利用することも可能です。)
 		</p>
 		<p>
-			Windows 2000以降(XP、Vista、7、8、8.1、10等)では、HSP3.5のインストールフォルダに書き込み権限が必要になります。
+			Windows 2000以降(XP、Vista、7、8、8.1、10等)では、HSP3.51のインストールフォルダに書き込み権限が必要になります。
 			インストーラーのデフォルトディレクトリ(/HSP35)にインストールを行なった場合なども、
 			管理者権限を持ったユーザーで実行するようにしてください。
 		</p>
@@ -172,7 +173,7 @@
 
 		<h2 id="DEMO">デモンストレーション</h2>
 		<p>
-			まず、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.5」→「サンプルデモ」
+			まず、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.51」→「サンプルデモ」
 			を起動させてみてください。HSPのサンプルデモが始まります。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、HSP3DEMO.EXEを起動させてみてください。）
 		</p>
@@ -181,7 +182,7 @@
 			色々なデモンストレーションを見ることができます。
 		</p>
 		<p>
-			また、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.5」→「HSPアシスタント」
+			また、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.51」→「HSPアシスタント」
 			を選択することで。HSPサンプルスクリプトを閲覧するための「HSPアシスタント」が起動します。
 			「HSPアシスタント」で、「Sample」のボタンを押してからファイルを選択するだけで、
 			すぐに実行・閲覧することができます。
@@ -189,8 +190,8 @@
 
 		<h2 id="CHANGE31">HSP3.4からの変更点</h2>
 		<p>
-			HSP3.5では、上位互換となる形で機能の修正と追加を行なっています。
-			HSP3.4で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.5で動作させることができます。
+			HSP3.51では、上位互換となる形で機能の修正と追加を行なっています。
+			HSP3.4で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.51で動作させることができます。
 			詳しくは、<a href="update.htm">アップデートガイド</a>を参照してください。
 		</p>
 
@@ -226,7 +227,7 @@
 			HSPアシスタントにより、命令の検索、サンプルスクリプトの参照、ネットワーク素材取得などを行なうことができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.5」→「HSPアシスタント」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.51」→「HSPアシスタント」
 			を選択することで、HSPアシスタントが起動されます。
 			(メニュー登録されていない場合は、展開されたディレクトリにある、HSPAT.EXEを起動させてみてください。)
 		</p>
@@ -241,7 +242,7 @@
 			ダウンロードして楽しむことができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.5」→「HSPTVブラウザ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.51」→「HSPTVブラウザ」
 			を選択することで、HSPTVブラウザが起動されます。
 			(メニュー登録されていない場合は、展開されたディレクトリにある、HSPTV.EXEを起動させてみてください。)
 		</p>
@@ -262,7 +263,7 @@
 			統合的な検索とシームレスなリンクが行なわれ、スクリプトの開発効率を高めます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.5」→「ドキュメントブラウザ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.51」→「ドキュメントブラウザ」
 			を選択することで起動されます。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、HDL.EXEを起動させてください。）
 		</p>
@@ -327,7 +328,7 @@
 			<dt>HSP3.6</dt>
 			<dd>
 			<p>
-			HSP3.5で導入できなかった機能については、引き続きアップデート版を更新していきます。
+			HSP3.51で導入できなかった機能については、引き続きアップデート版を更新していきます。
 			今後導入する予定として検討されている機能は、以下の通りです。(この順番で行われるということではありません。)
 			</p>
 			<dl>
@@ -408,9 +409,74 @@
 			メールにてinfo@hsp.tvまでご連絡下さい。詳細をご案内させていただきます。
 		</p>
 
+		<h2 id="PRONAMA">プロ生ちゃんコラボ素材について</h2>
+		<p>
+			HSP3.51フルセットには、プログラミング生放送のキャラクター「プロ生ちゃん」と HSP3マスコットキャラクターの「珠音ちゃん」のコラボレーション企画により作成された、珠音ちゃん・プロ生ちゃんに関する素材が追加されています。<br>
+			収録されている素材は、「HSP3.51プロ生ちゃんエディション」と同一のものです。<br>
+			HSP3.51フルセットは、HSP3.51プロ生ちゃんエディションからスクリプトエディタの背景素材、プロ生ちゃん3D素材を除いて、本体の仕様は同一のものになります。
+		</p>
+
+		<p>
+			以下のファイルが、プロ生ちゃんコラボ素材として提供されています。
+		</p>
+		<pre>
+	<a href="../hsptv/mini_kei.png">mini_kei.png</a>
+	<a href="../hsptv/mini_tamane.png">mini_tamane.png</a>
+
+	<a href="../hsptv/kei_knight1_1.png">kei_knight1_1.png</a>
+	<a href="../hsptv/kei_knight1_2.png">kei_knight1_2.png</a>
+	<a href="../hsptv/kei_knight1_3.png">kei_knight1_3.png</a>
+	<a href="../hsptv/kei_knight1_4.png">kei_knight1_4.png</a>
+	<a href="../hsptv/kei_knight1_5.png">kei_knight1_5.png</a>
+	<a href="../hsptv/kei_knight2_1.png">kei_knight2_1.png</a>
+	<a href="../hsptv/kei_knight2_2.png">kei_knight2_2.png</a>
+	<a href="../hsptv/kei_knight2_3.png">kei_knight2_3.png</a>
+	<a href="../hsptv/kei_knight2_4.png">kei_knight2_4.png</a>
+	<a href="../hsptv/kei_knight2_5.png">kei_knight2_5.png</a>
+	<a href="../hsptv/kei_school1_1.png">kei_school1_1.png</a>
+	<a href="../hsptv/kei_school1_2.png">kei_school1_2.png</a>
+	<a href="../hsptv/kei_school1_3.png">kei_school1_3.png</a>
+	<a href="../hsptv/kei_school1_4.png">kei_school1_4.png</a>
+	<a href="../hsptv/kei_school1_5.png">kei_school1_5.png</a>
+
+	<a href="../hsptv/tamane_wizard1_1.png">tamane_wizard1_1.png</a>
+	<a href="../hsptv/tamane_wizard1_2.png">tamane_wizard1_2.png</a>
+	<a href="../hsptv/tamane_wizard1_3.png">tamane_wizard1_3.png</a>
+	<a href="../hsptv/tamane_wizard1_4.png">tamane_wizard1_4.png</a>
+	<a href="../hsptv/tamane_wizard1_5.png">tamane_wizard1_5.png</a>
+	<a href="../hsptv/tamane_wizard2_1.png">tamane_wizard2_1.png</a>
+	<a href="../hsptv/tamane_wizard2_2.png">tamane_wizard2_2.png</a>
+	<a href="../hsptv/tamane_wizard2_3.png">tamane_wizard2_3.png</a>
+	<a href="../hsptv/tamane_wizard2_4.png">tamane_wizard2_4.png</a>
+	<a href="../hsptv/tamane_wizard2_5.png">tamane_wizard2_5.png</a>
+	<a href="../hsptv/tamane_school1_1.png">tamane_school1_1.png</a>
+	<a href="../hsptv/tamane_school1_2.png">tamane_school1_2.png</a>
+	<a href="../hsptv/tamane_school1_3.png">tamane_school1_3.png</a>
+	<a href="../hsptv/tamane_school1_4.png">tamane_school1_4.png</a>
+	<a href="../hsptv/tamane_school1_5.png">tamane_school1_5.png</a>
+
+	<a href="../hsptv/pronama.bmp">pronama.bmp</a>
+		</pre>
+
+		<p>
+		プロ生ちゃんコラボ素材は、ガイドラインに従った上で、HSPと同様のライセンスでユーザーが自由に使用・配布することができます。
+		(データを使用しても著作権表記を行なう義務はありません。また、HSP3上に限らずどのような形でも利用することができます。)<br>
+		素材を使用する際には、必ず「プロ生ちゃん」「珠音ちゃん」の利用ガイドラインをお読みください。
+		</p>
+		<pre>
+		<p>
+		プロ生ちゃん（暮井 慧）利用ガイドライン
+		<a href="https://kei.pronama.jp/guideline/" target="_blank">https://kei.pronama.jp/guideline/</a>
+
+		珠音ちゃん 利用ガイドライン
+		<a href="http://hsp.tv/make/tamane2d.html" target="_blank">http://hsp.tv/make/tamane2d.html</a>
+		</pre>
+		</p>
+
+
 		<h2 id="COPYRIGHT">著作権、ライセンスについて</h2>
 		<p>
-			HSP3.5フルセットは、「HSP開発システム」と「追加コンポーネント」で構成された複合パッケージとなっています。
+			HSP3.51フルセットは、「HSP開発システム」と「追加コンポーネント」で構成された複合パッケージとなっています。
 			HSP開発システムは、開発の中心となる要素で以下の項目を指します。
 		</p>
 		<ul>
